# B2heavy

./: .gitignore  README.md  TwoPointFunctions.py  __init__.py  pyproject.toml
b2heavy/: FnalHISQMetadata.py
notebooks/: 2pts_fit_disp_rel.ipynb  2pts_fit_read_single_fit.ipynb  2pts_fit_single_case.ipynb  check_archives.ipynb  confront_jk.ipynb  dispersion_relation.ipynb  form_factor.ipynb  form_factor_D.ipynb  form_factor_Dst.ipynb  how_to_treat_correlation.ipynb  plot_form_factors.ipynb  plot_kwargs.py  prova.ipynb  ratio_XV.ipynb  ratio_fromscratch.ipynb  ratio_global_fit.ipynb  ratio_global_fit_D*.ipynb  ratio_global_fit_D.ipynb  ratio_jk.ipynb  ratio_mixed_fit_D.ipynb  ratio_multiple_mom.ipynb  ratio_r0.ipynb  ratio_r1.ipynb  ratio_ra1.ipynb  ratio_zra1.ipynb  recoil_parameter.ipynb  scemo.pickle  scemo.py  single_corr_fit.ipynb  single_correlator.ipynb  single_ratio.ipynb
routines/: 2pts_fit_all.toml  2pts_fit_config.toml  2pts_fit_config_D.toml  2pts_fit_config_Dsst.toml  2pts_fit_config_Dst_2.toml  2pts_fit_config_good.toml  3pts_fit_config.toml  3pts_fit_config_D.toml  3pts_fit_config_D_global.toml  3pts_fit_config_Dsst.toml  3pts_fit_config_Dst.toml  3pts_fit_config_Dst_1.toml  3pts_fit_config_Dst_2.toml  3pts_fit_config_Dst_global.toml  DEFAULT_ANALYSIS_ROOT.py  Dsst_3.toml  fit_2pts_config.py  fit_2pts_dispersion_relation.py  fit_2pts_preanalysis.py  fit_2pts_stability_test.py  fit_2pts_stability_test_4crit.py  fit_2pts_summarize.py  fit_2pts_trange.py  fit_2pts_trange_stability.py  fit_2pts_utils.py  fit_3pts_config.py  fit_3pts_config_global.py  scemo.sh  (+5 more)
(+56 files in other folders)
