[tool.poetry]
name = "b2heavy"
version = "0.1.0"
description = ""
authors = ["Pietro Butti <pietro.butti.fl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
gvar = "^12.1"
pandas = "^2.2.0"
xarray = "^2024.1.0"
lsqfit = "^13.0.4"
h5py = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
